--- a/COOL.ipynb
+++ b/COOL.ipynb
@@ -10,8 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting viennarna\n",
-      "  Downloading ViennaRNA-2.7.0-cp313-cp313-macosx_11_0_arm64.whl.metadata (13 kB)\n",
+      "Requirement already satisfied: viennarna in /opt/anaconda3/lib/python3.13/site-packages (2.7.0)\n",
       "Requirement already satisfied: ipywidgets in /opt/anaconda3/lib/python3.13/site-packages (8.1.5)\n",
       "Requirement already satisfied: comm>=0.1.3 in /opt/anaconda3/lib/python3.13/site-packages (from ipywidgets) (0.2.1)\n",
       "Requirement already satisfied: ipython>=6.1.0 in /opt/anaconda3/lib/python3.13/site-packages (from ipywidgets) (8.30.0)\n",
@@ -30,11 +29,7 @@
       "Requirement already satisfied: ptyprocess>=0.5 in /opt/anaconda3/lib/python3.13/site-packages (from pexpect>4.3->ipython>=6.1.0->ipywidgets) (0.7.0)\n",
       "Requirement already satisfied: executing in /opt/anaconda3/lib/python3.13/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (0.8.3)\n",
       "Requirement already satisfied: asttokens in /opt/anaconda3/lib/python3.13/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (3.0.0)\n",
-      "Requirement already satisfied: pure-eval in /opt/anaconda3/lib/python3.13/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (0.2.2)\n",
-      "Downloading ViennaRNA-2.7.0-cp313-cp313-macosx_11_0_arm64.whl (2.3 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.3/2.3 MB\u001b[0m \u001b[31m2.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "Installing collected packages: viennarna\n",
-      "Successfully installed viennarna-2.7.0\n"
+      "Requirement already satisfied: pure-eval in /opt/anaconda3/lib/python3.13/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (0.2.2)\n"
      ]
     }
    ],
@@ -44,14 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "21b0300c-fdbd-481c-adf6-f0b148608c35",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62cefebbe106423c9b318678fbbc3dcb",
+       "model_id": "7b69d56cc02248f981b3a1e1bb2ac0db",
        "version_major": 2,
        "version_minor": 0
       },
